test/cases/redefinition/global_bad_ident_4.c
// RUN: %check -e %s

static int ch; // CHECK: note: previous definition
static char ch; // CHECK: error: mismatching definitions of "ch"
